--- a/MIPS_Processor.qsf
+++ b/MIPS_Processor.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C70F896C6
-set_global_assignment -name TOP_LEVEL_ENTITY MIPS_MUX_21
+set_global_assignment -name TOP_LEVEL_ENTITY MIPS
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:00:25  MAY 18, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.0
@@ -80,16 +80,25 @@ set_global_assignment -name VHDL_FILE MIPS_MUX_21.vhdl
 set_global_assignment -name VHDL_FILE MIPS_SIGN_EXTEND.vhdl
 set_global_assignment -name VHDL_FILE MIPS_SHIFTER.vhdl
 set_global_assignment -name VHDL_FILE MIPS_ADDER.vhdl
+set_global_assignment -name EDA_TEST_BENCH_NAME MIPS_MINOR_COMPONENTS_TB -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_MINOR_COMPONENTS_TB
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "20 ps" -section_id MIPS_MINOR_COMPONENTS_TB
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MIPS_MINOR_COMPONENTS_TB -section_id MIPS_MINOR_COMPONENTS_TB
+set_global_assignment -name VHDL_FILE MIPS_REGISTER.vhdl
+set_global_assignment -name VHDL_FILE MIPS_MUX_41.vhdl
+set_global_assignment -name EDA_TEST_BENCH_NAME MIPS_REGISTER_TB -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_REGISTER_TB
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 ps" -section_id MIPS_REGISTER_TB
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MIPS_REGISTER_TB -section_id MIPS_REGISTER_TB
+set_global_assignment -name VHDL_FILE MIPS_CONTROL_UNIT.vhdl
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_ALU_TB.vhdl -section_id MIPS_ALU_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGS_TB.vhdl -section_id MIPS_REGS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_RAM_TB.vhdl -section_id MIPS_INST_RAM_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_ROM_TB.vhdl -section_id MIPS_INST_ROM_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_DATA_MEM_TB.vhdl -section_id MIPS_DATA_MEM_TB
-set_global_assignment -name EDA_TEST_BENCH_NAME MIPS_MINOR_COMPONENTS_TB -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_MINOR_COMPONENTS_TB
-set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "20 ps" -section_id MIPS_MINOR_COMPONENTS_TB
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MIPS_MINOR_COMPONENTS_TB -section_id MIPS_MINOR_COMPONENTS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_MINOR_COMP_TB.vhdl -section_id MIPS_MINOR_COMPONENTS_TB
+set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGISTER_TB.vhdl -section_id MIPS_REGISTER_TB
+set_global_assignment -name VHDL_FILE MIPS.vhdl
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
