--- a/MIPS_Processor.qsf
+++ b/MIPS_Processor.qsf
@@ -46,7 +46,7 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH MIPS_MINOR_COMPONENTS_TB -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH MIPS_ALU_TB -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME MIPS_ALU_TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_ALU_TB
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "2 ns" -section_id MIPS_ALU_TB
@@ -91,6 +91,10 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_REGIST
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "10 ps" -section_id MIPS_REGISTER_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MIPS_REGISTER_TB -section_id MIPS_REGISTER_TB
 set_global_assignment -name VHDL_FILE MIPS_CONTROL_UNIT.vhdl
+set_global_assignment -name VHDL_FILE MIPS.vhdl
+set_global_assignment -name VHDL_FILE convbinario7seg.vhdl
+set_global_assignment -name VHDL_FILE MIPS_DEBUG.vhdl
+set_global_assignment -name VHDL_FILE MIPS_CONSTANTS.vhdl
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_ALU_TB.vhdl -section_id MIPS_ALU_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGS_TB.vhdl -section_id MIPS_REGS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_RAM_TB.vhdl -section_id MIPS_INST_RAM_TB
@@ -98,7 +102,6 @@ set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_ROM_TB.vhdl -section_i
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_DATA_MEM_TB.vhdl -section_id MIPS_DATA_MEM_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_MINOR_COMP_TB.vhdl -section_id MIPS_MINOR_COMPONENTS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGISTER_TB.vhdl -section_id MIPS_REGISTER_TB
-set_global_assignment -name VHDL_FILE MIPS.vhdl
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
