--- a/MIPS_Processor.qsf
+++ b/MIPS_Processor.qsf
@@ -37,7 +37,7 @@
 
 
 set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name DEVICE EP2C70F896C6
+set_global_assignment -name DEVICE EP2C35F672C6
 set_global_assignment -name TOP_LEVEL_ENTITY MIPS
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:00:25  MAY 18, 2018"
@@ -46,7 +46,7 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH MIPS_ALU_TB -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH MIPS_DATA_MEM_TB -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME MIPS_ALU_TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_ALU_TB
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "2 ns" -section_id MIPS_ALU_TB
@@ -58,7 +58,6 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME DUT -section_id MIPS_REGS_T
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ps" -section_id MIPS_REGS_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MIPS_REGS_TB -section_id MIPS_REGS_TB
 set_global_assignment -name VHDL_FILE MIPS_INST_ROM.vhd
-set_global_assignment -name VHDL_FILE MIPS_INST_RAM.vhd
 set_global_assignment -name VHDL_FILE MIPS_DATA_RAM.vhd
 set_global_assignment -name VHDL_FILE MIPS_ALU.vhdl
 set_global_assignment -name VHDL_FILE MIPS_REGS.vhdl
@@ -95,6 +94,80 @@ set_global_assignment -name VHDL_FILE MIPS.vhdl
 set_global_assignment -name VHDL_FILE convbinario7seg.vhdl
 set_global_assignment -name VHDL_FILE MIPS_DEBUG.vhdl
 set_global_assignment -name VHDL_FILE MIPS_CONSTANTS.vhdl
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_N2 -to clock_fpga
+set_location_assignment PIN_V2 -to debug[2]
+set_location_assignment PIN_V1 -to debug[1]
+set_location_assignment PIN_U4 -to debug[0]
+set_location_assignment PIN_C13 -to new_pc[7]
+set_location_assignment PIN_AC13 -to new_pc[6]
+set_location_assignment PIN_AD13 -to new_pc[5]
+set_location_assignment PIN_AF14 -to new_pc[4]
+set_location_assignment PIN_AE14 -to new_pc[3]
+set_location_assignment PIN_P25 -to new_pc[2]
+set_location_assignment PIN_N26 -to new_pc[1]
+set_location_assignment PIN_N25 -to new_pc[0]
+set_location_assignment PIN_G26 -to clock
+set_location_assignment PIN_W26 -to load_pc
+set_location_assignment PIN_AF10 -to hex0[0]
+set_location_assignment PIN_AB12 -to hex0[1]
+set_location_assignment PIN_AC12 -to hex0[2]
+set_location_assignment PIN_AD11 -to hex0[3]
+set_location_assignment PIN_AE11 -to hex0[4]
+set_location_assignment PIN_V14 -to hex0[5]
+set_location_assignment PIN_V13 -to hex0[6]
+set_location_assignment PIN_V20 -to hex1[0]
+set_location_assignment PIN_V21 -to hex1[1]
+set_location_assignment PIN_W21 -to hex1[2]
+set_location_assignment PIN_Y22 -to hex1[3]
+set_location_assignment PIN_AA24 -to hex1[4]
+set_location_assignment PIN_AA23 -to hex1[5]
+set_location_assignment PIN_AB24 -to hex1[6]
+set_location_assignment PIN_AB23 -to hex2[0]
+set_location_assignment PIN_V22 -to hex2[1]
+set_location_assignment PIN_AC25 -to hex2[2]
+set_location_assignment PIN_AC26 -to hex2[3]
+set_location_assignment PIN_AB26 -to hex2[4]
+set_location_assignment PIN_AB25 -to hex2[5]
+set_location_assignment PIN_Y24 -to hex2[6]
+set_location_assignment PIN_Y23 -to hex3[0]
+set_location_assignment PIN_AA25 -to hex3[1]
+set_location_assignment PIN_AA26 -to hex3[2]
+set_location_assignment PIN_Y26 -to hex3[3]
+set_location_assignment PIN_Y25 -to hex3[4]
+set_location_assignment PIN_U22 -to hex3[5]
+set_location_assignment PIN_W24 -to hex3[6]
+set_location_assignment PIN_U9 -to hex4[0]
+set_location_assignment PIN_U1 -to hex4[1]
+set_location_assignment PIN_U2 -to hex4[2]
+set_location_assignment PIN_T4 -to hex4[3]
+set_location_assignment PIN_R7 -to hex4[4]
+set_location_assignment PIN_R6 -to hex4[5]
+set_location_assignment PIN_T3 -to hex4[6]
+set_location_assignment PIN_T2 -to hex5[0]
+set_location_assignment PIN_P6 -to hex5[1]
+set_location_assignment PIN_P7 -to hex5[2]
+set_location_assignment PIN_T9 -to hex5[3]
+set_location_assignment PIN_R5 -to hex5[4]
+set_location_assignment PIN_R4 -to hex5[5]
+set_location_assignment PIN_R3 -to hex5[6]
+set_location_assignment PIN_R2 -to hex6[0]
+set_location_assignment PIN_P4 -to hex6[1]
+set_location_assignment PIN_P3 -to hex6[2]
+set_location_assignment PIN_M2 -to hex6[3]
+set_location_assignment PIN_M3 -to hex6[4]
+set_location_assignment PIN_M5 -to hex6[5]
+set_location_assignment PIN_M4 -to hex6[6]
+set_location_assignment PIN_L3 -to hex7[0]
+set_location_assignment PIN_L2 -to hex7[1]
+set_location_assignment PIN_L9 -to hex7[2]
+set_location_assignment PIN_L6 -to hex7[3]
+set_location_assignment PIN_L7 -to hex7[4]
+set_location_assignment PIN_P9 -to hex7[5]
+set_location_assignment PIN_N9 -to hex7[6]
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_ALU_TB.vhdl -section_id MIPS_ALU_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGS_TB.vhdl -section_id MIPS_REGS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_RAM_TB.vhdl -section_id MIPS_INST_RAM_TB
@@ -102,7 +175,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_INST_ROM_TB.vhdl -section_i
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_DATA_MEM_TB.vhdl -section_id MIPS_DATA_MEM_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_MINOR_COMP_TB.vhdl -section_id MIPS_MINOR_COMPONENTS_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE MIPS_REGISTER_TB.vhdl -section_id MIPS_REGISTER_TB
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
